--- a/English_vocabulary_test/public/English_vocabulary_chapter5.html
+++ b/English_vocabulary_test/public/English_vocabulary_chapter5.html
@@ -3,12 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>영어 단어장</title>
+  <title>charter5</title>
   <link rel="stylesheet" href="/css/123.css">
 </head>
 <body>
-  <h1 class="title">영어 단어장</h1>  
-  <p class="title">chapter 1</p>
+  <h1 class="title">현재 제작중</h1>  
+  <p class="title">chapter 5</p>
+
 
   <div style="text-align: center;"> 
     <span class="chaptersNumber" onclick="location.href='English_vocabulary_test.html'">1</span>
@@ -17,16 +18,7 @@
     <span class="chaptersNumber" onclick="location.href='/chapter4'">4</span>
     <span class="chaptersNumber" onclick="location.href='/chapter5'">5</span>
   </div>
-  
-
-  <form id="myForm">
-    <label for="name">영단어:</label>
-    <input type="text" id="E_voca" text="text" readonly><!-- 읽기 전용으로 -->
-    <input type="text" id="K_voca" text="text" required><!-- 서버로 제출되기 전 반드시 채워져 있어야 하는 입력 필드를 명시합니다 -->
-    <button type="button" onclick="getFormData()">제출</button>
-  </form>
-  <button id="hintButton" type="button" style="display:none;" onclick="showHint()">힌트 보기</button>
 
   <script src="/js/input_output.js"></script>
 </body>
-</html>
+</html> 
